Fix nashorn dep and Calculator app